dataset1235/2025-2/1153765216/users/2249779960/executions/2372395858_1050673866.log
== SUBMISSION (2025-08-28 18:51:44)
-- CODE: 
pesosaco = float(input())
quantidadediaria = float(input())
restante = pesosaco - (quantidadediaria * 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:43:01)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
total = pesosaco - (quantidade) * 5
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:24:19)
-- CODE: 
peso = float(input())
quantidade = float(input())
total = peso * quantidade
print(round(quantidade))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
13
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
17
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
20
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
31
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
16
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:43:02)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
total = pesosaco - (quantidade) * 5
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:45:40)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
total = pesosaco -(quantidade* 5)
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:38:49)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
total = pesosaco * quantidade
print(round(total, 2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
34166.21
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
97444.45
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
20116.7
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
61556.54
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
34521.42
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
5000555.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:49:19)
-- CODE: 
pesosaco = float(input())
quantidadediaria = float(input())
restante = pesosaco _ (quantidadediaria * 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
-- ERROR:
File "XXXX", line 3
    restante = pesosaco _ (quantidadediaria * 5)
                        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
-- ERROR:
File "XXXX", line 3
    restante = pesosaco _ (quantidadediaria * 5)
                        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
-- ERROR:
File "XXXX", line 3
    restante = pesosaco _ (quantidadediaria * 5)
                        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
-- ERROR:
File "XXXX", line 3
    restante = pesosaco _ (quantidadediaria * 5)
                        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
-- ERROR:
File "XXXX", line 3
    restante = pesosaco _ (quantidadediaria * 5)
                        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
-- ERROR:
File "XXXX", line 3
    restante = pesosaco _ (quantidadediaria * 5)
                        ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:48:36)
-- CODE: 
peso = float(input())
quantidade = float(input())
restante = peso - (quantidade* 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:51:15)
-- CODE: 
pesosaco = float(input())
quantidadediaria = float(input())
restante = pesosaco - (quantidadediaria * 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:47:20)
-- CODE: 
peso = float(input())
quantidade = float(input())
total = peso - (quantidade* 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:53:10)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
None
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
None
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
None
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
None
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
None
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
None
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:38:05)
-- CODE: 
pesosaco = float(input())
quantidadediaria = float(input())
total = pesosaco * quantidadediaria
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
34166.21
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
97444.45
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
20116.7
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
61556.54
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
34521.42
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
5000555.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:44:39)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
total = pesosaco - (quantidade * 5)
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:25:16)
-- CODE: 
peso = float(input())
quantidade = float(input())
total = peso * quantidade
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
34166.21
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
97444.45
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
20116.7
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
61556.54
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
34521.42
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
5000555.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:45:35)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
total = pesosaco - (quantidade* 5)
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:43:27)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
total = pesosaco - (quantidade * 5)
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:49:33)
-- CODE: 
pesosaco = float(input())
quantidadediaria = float(input())
restante = pesosaco - (quantidadediaria * 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:43:28)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
total = pesosaco - (quantidade * 5)
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:43:45)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
total = pesosaco - (quantidade * 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:49:04)
-- CODE: 
pesosaco = float(input())
quantidadediaria = float(input())
restante = pesosaco - (quantidadediaria * 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:47:00)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
total = pesosaco - (quantidade* 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(restante, 2))
                ^^^^^^^^
NameError: name 'restante' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:44:10)
-- CODE: 
pesosaco = float(input())
quantidade = float(input())
restante = pesosaco - (quantidade * 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:49:03)
-- CODE: 
pesosaco = float(input())
quantidadediaria = float(input())
restante = pesosaco - (quantidadediaria * 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.78
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:38:04)
-- CODE: 
pesosaco = float(input())
quantidadediaria = float(input())
total = pesosaco * quantidadediaria
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
34166.21
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
97444.45
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
20116.7
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
61556.54
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
34521.42
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
5000555.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:51:37)
-- CODE: 
pesosaco = float(input())
quantidadediaria = float(input())
restante = pesosaco - (quantidadediaria * 5)
print(round(restante, 5))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.7833
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.5555
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:51:30)
-- CODE: 
pesosaco = float(input())
quantidadediaria = float(input())
restante = pesosaco - (quantidadediaria * 5)
print(round(restante, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2552.85
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5566.03
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
899.783
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1806.1
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2140.8
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
0.556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:50:31)
-- CODE: 
pesosaco float(input())
quantidadediaria = float(input())
restante = pesosaco - (quantidadediaria * 5)
print(round(restante, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
-- ERROR:
File "XXXX", line 1
    pesosaco float(input())
             ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
-- ERROR:
File "XXXX", line 1
    pesosaco float(input())
             ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
-- ERROR:
File "XXXX", line 1
    pesosaco float(input())
             ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
-- ERROR:
File "XXXX", line 1
    pesosaco float(input())
             ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
-- ERROR:
File "XXXX", line 1
    pesosaco float(input())
             ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
-- ERROR:
File "XXXX", line 1
    pesosaco float(input())
             ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
